--- a/Frontend Part/pages/css/index.css
+++ b/Frontend Part/pages/css/index.css
@@ -1,13 +1,14 @@
 
 :root {
-    --ass: #2980B9;
-    --green: #4BEFB0;
+    --green: #17A589;
     --black: #000000;
     --light-blue: #96BAED;
-    --gray: #333333;
+    --gray: #D35400;
     --white: #fff;
 }
-
+.h-color{
+    color: var(--white);
+}
 
 /* navbar active section start  */
 
@@ -24,7 +25,7 @@
 }
 
 .navbar-color{
-    background-color: var(--ass);
+    background-color: var(--green);
     color: var(--white);
 }
 
@@ -32,3 +33,11 @@
 .carousel-item > img {
     height: 500px;
 }
+/* slider end */
+
+/* why weight scale  start */
+.why-bg{
+    background: #17A589;
+}
+
+/* why weight scale end */
